--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL = 'postgres://twsarcxc:sHuxSERWxCC7prWsmablhiBH_nxkyxwX@suleiman.db.elephantsql.com/twsarcxc'
+DATABASE_URL = 'postgresql://twsarcxc:sHuxSERWxCC7prWsmablhiBH_nxkyxwX@suleiman.db.elephantsql.com/twsarcxc'
