Eden + Jonathan: only admins can access admin page

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 DATABASE_URL = 'postgresql://twsarcxc:sHuxSERWxCC7prWsmablhiBH_nxkyxwX@suleiman.db.elephantsql.com/twsarcxc'
+ADMIN_USERS = ['jm2889', 'jc4557', 'kw2689', 'eb1889']
