--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 DATABASE_URL = 'postgresql://twsarcxc:sHuxSERWxCC7prWsmablhiBH_nxkyxwX@suleiman.db.elephantsql.com/twsarcxc'
 ADMIN_USERS = ['jm2889', 'jc4557', 'kw2689', 'eb1889']
-SECRET_KEY = 'defendingwomenonereviewatatime'
+SECRET_KEY = 'betyoucantguessme'
